<resources>
    <string name="app_name">TongCheng</string>
    <string name="home">首页</string>
    <string name="message">信息</string>
    <string name="release">发布</string>
    <string name="shopcart">购物车</string>
    <string name="me">我</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="login_id">请输入账号</string>
    <string name="login_passwd">请输入密码</string>
    <string name="register_phone">请输入手机号码</string>
    <string name="register_passwd_confirm">请再次输入密码</string>
    <string name="register_address">请输入所在地</string>
    <string name="register_email">请输入邮箱地址</string>
    <string name="register_username">请输入姓名</string>
    <string name="forget">忘记密码</string>
    <string name="register">注册</string>
    <string name="search">请搜索物品</string>
    <string name="choose">请选择</string>
    <string name="verification">获取验证码</string>
    <string name="next">下一步</string>
    <string name="myrelease">我的发布</string>
    <string name="myIndent">我的订单</string>
    <string name="delivery">待收货</string>
    <string name="evauluate">待评价</string>
    <string name="type_release">选择发布类型</string>
    <string name="setting">设置</string>
    <string name="userdetail">个人信息</string>
    <string name="cache">清除缓存</string>
    <string name="usersafety">账户安全</string>
    <string name="feedback">用户反馈</string>
    <string name="quitback">退出登录</string>
    <string name="confirm">确定</string>
    <string name="mycollection">我的收藏</string>
    <string name="recruit">招聘</string>
    <string name="tenement">租房</string>
    <string name="pet">宠物</string>
    <string name="second_hand_car">二手车</string>
    <string name="second_hand_goods">二手物品</string>
    <string name="home_pic">今日看点</string>
    <string name="head">头像</string>
    <string name="username">用户姓名</string>
    <string name="mygoodsaddress">收货地址管理</string>
    <string name="curriculum_vitae">发简历找工作</string>
    <string name="release_recruit">发职位找人才</string>
    <string name="cart">购物车</string>
    <string name="editall">编辑全部</string>
    <string name="cancel">取消</string>
    <string name="release_fulltime">发布全职职位</string>
    <string name="release_parttime">发布兼职职位</string>
    <string name="parttimename">兼职名称</string>
    <string name="parttimetype">兼职类型</string>
    <string name="parttimenum">招聘人数</string>
    <string name="parttime_time">兼职时效</string>
    <string name="periode_of_time">兼职时段</string>
    <string name="parttimewages">薪资水平</string>
    <string name="parttimepayroll">结薪方式</string>
    <string name="parttimeaddress">详细地址</string>
    <string name="parttimecontent">工作内容</string>
    <string name="linkman">联系人</string>
    <string name="linkphone">联系电话</string>
    <string name="companyname">公司名称</string>
    <string name="submit">提交</string>
    <string name="longtime">长期</string>
    <string name="shorttime">短期</string>
    <string name="choose0">选择</string>
    <string name="arbitrariness">任意</string>
    <string name="detailaddress">详细地址</string>
    <string name="detailaddresshint">请输入详细地址</string>
    <string name="negotiation">面议</string>
    <string name="recruitfulltime">我要招聘</string>
    <string name="wages">月    薪</string>
    <string name="welfare">福利待遇</string>
    <string name="workcontent">工作内容</string>
    <string name="qualifications">学历要求</string>
    <string name="gress">猜你喜欢</string>
    <string name="releasegoods">发布宝贝</string>
    <string name="choosepic">选择图片（6张以内）</string>
    <string name="describe">  输入宝贝描述
        描述一下宝贝来源，新旧程度等</string>
    <string name="goodstitle">宝贝标题 填写品牌型号</string>
    <string name="price">卖价</string>
    <string name="carriage">运费</string>
    <string name="assortment">分类</string>
    <string name="goodsassortment">物品类别</string>
    <string name="addcart">加入购物车</string>
    <string name="paynow">立即购买</string>
    <string name="applyfor">申请职位</string>
    <string name="delete">删除</string>
</resources>
