<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_register1_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar">

        <Button
            android:id="@+id/btn_register1_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:background="@drawable/title_btn_back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        </RelativeLayout>

    <EditText
        android:id="@+id/et_register1_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/rl_register1_top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/register_phone"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_register1_verification"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register1_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register1_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register1_phone"
        android:layout_toRightOf="@+id/et_register1_verification"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/btn_style_white"
        android:text="@string/verification"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_register1_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register1_verification"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:background="#0000"
        android:text="@string/next"
        android:textColor="#C3B59B"
        android:textSize="30sp" />

</RelativeLayout>