<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_register2_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar">

        <Button
            android:id="@+id/btn_register2_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/title_btn_back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/text_white"
            android:textSize="20sp"
            android:textStyle="bold" />
        </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_register2_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/et_register2_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_editbox"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/login_passwd"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:password="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_register2_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/et_register2_password"
                android:background="@drawable/login_editbox"
                android:hint="@string/register_passwd_confirm"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:password="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_register2_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/et_register2_password_confirm"
                android:background="@drawable/login_editbox"
                android:hint="@string/register_username"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_register2_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/et_register2_username"
                android:background="@drawable/login_editbox"
                android:hint="@string/register_address"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_register2_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/et_register2_address"
                android:background="@drawable/login_editbox"
                android:hint="@string/register_email"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_register2_register"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_style_white"
                android:text="@string/register"
                android:textColor="@color/text_black"
                android:layout_below="@+id/et_register2_email"
                android:layout_marginTop="20dp" />
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>