<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/rl_login_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@mipmap/title_bar">

        <Button
            android:id="@+id/btn_login_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp"
            android:background="@drawable/title_btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        </RelativeLayout>

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/login_id"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp"
        android:background="@drawable/login_editbox" />

    <LinearLayout
        android:id="@+id/ll_login_passwd"
        android:layout_below="@+id/et_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_editbox"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:hint="@string/login_passwd"
            android:password="true"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_login_showpasswd"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:visibility="visible"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_login_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_passwd"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:background="#0000"
            android:text="@string/forget"
            android:textColor="#C3B59B"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="23dp"
            android:layout_marginTop="5dp"
            android:background="#0000"
            android:text="@string/register"
            android:textColor="#C3B59B"
            android:textSize="16sp" />
        </RelativeLayout>

    <Button
        android:id="@+id/btn_login_sure"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/btn_style_white"
        android:layout_below="@+id/rl_login_mid"
        android:text="@string/login"
        android:textColor="#000"
        android:textSize="18sp" />

</RelativeLayout>